--- a/workflows/lectio2synod.yml
+++ b/workflows/lectio2synod.yml
@@ -2,7 +2,7 @@ on:
   rss:
     url: http://evangelizo.org/rss/v2/evangelizo_rss-de.xml
     config:
-#      every: "0 7 * * *"
+      every: "0 7 * * *"
       filter:
         content:
           $regex: ....+
