--- a/workflows/evangelium2synod2.yml
+++ b/workflows/evangelium2synod2.yml
@@ -2,7 +2,8 @@ on:
   rss:
     url: http://evangelizo.org/rss/v2/evangelizo_rss-de.xml
     config:
-      every: "0 13 * * *" #backup if fails at 9
+      active: false
+      every: "0 13 * * *"
       filter:
         content:
           $regex: ....+
