--- a/workflows/kommentar2synod.yml
+++ b/workflows/kommentar2synod.yml
@@ -4,12 +4,12 @@ on:
       - http://evangelizo.org/rss/v2/evangelizo_rss-de.xml
       - https://rss.evangelizo.org/rss/v2/evangelizo_rss-de.xml
     config:
-      every: "0 10,14 * * *"
+      every: "0 9,13 * * *"
       filter:
         content:
           $regex: ....+
-        title:
-          $regex: Kommentar
+        categories:
+          $regex: MEDITATIO
 jobs:
   send2matrix:
     runs-on: ubuntu-latest
