--- a/workflows/lectio2synod.yml
+++ b/workflows/lectio2synod.yml
@@ -42,7 +42,7 @@ jobs:
          room_id: ${{ secrets.MATRIX_ROOM_ID }}
          access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
          message: |
-              Im Web nach ${{on.rss.outputs.title}} suchen:
+              Im Web nach der Schriftstelle suchen:
               ${{on.rss.outputs.contentSnippet}}
               
               ----------
