--- a/workflows/psalm2synod.yml
+++ b/workflows/psalm2synod.yml
@@ -66,7 +66,9 @@ jobs:
           room_id: ${{ secrets.MATRIX_ROOM_ID }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
           message: |
-
+               --
+               (Quelle: ${{on.rss.outputs.link}})
+               
+               
                ----------
-               ${{on.rss.outputs.url}}
           server: "synod.im"          
