--- a/.github/workflows/actionsflow.yml
+++ b/.github/workflows/actionsflow.yml
@@ -1,7 +1,7 @@
 name: Actionsflow
 on:
-  schedule:
-    - cron: "0,30 5-15 * * *"
+#  schedule:
+#    - cron: "0,30 5-15 * * *"
   push:
     branches:
       - main
